@@ -99,13 +99,13 @@ DISTCLEANFILES += ovp2ovf.web
 ##
 OTANGLE_tests = omegaware/odvicopy.test omegaware/odvitype.test \
 	omegaware/otangle.test
-OMFONTS_tests = omegaware/charwd.test omegaware/level1.test \
-	omegaware/ligkern.test omegaware/ofonts.test \
-	omegaware/omfonts.test omegaware/overbmp.test \
-	omegaware/realnum.test omegaware/repeat.test \
-	omegaware/selectfont.test omegaware/shorten.test \
-	omegaware/specialhex.test omegaware/vrepeat.test \
-	omegaware/yannis.test
+OMFONTS_tests = omegaware/charwd.test omegaware/check.test \
+	omegaware/level1.test omegaware/ligkern.test \
+	omegaware/ofonts.test omegaware/omfonts.test \
+	omegaware/overbmp.test omegaware/realnum.test \
+	omegaware/repeat.test omegaware/selectfont.test \
+	omegaware/shorten.test omegaware/specialhex.test \
+	omegaware/vrepeat.test omegaware/yannis.test
 EXTRA_DIST += $(OTANGLE_tests) $(OMFONTS_tests)
 
 if OTANGLE
@@ -115,6 +115,10 @@ endif OTANGLE
 ## omegaware/charwd.test
 EXTRA_DIST += omegaware/tests/charwd-r.pl omegaware/tests/charwd-v.vpl
 DISTCLEANFILES += omegaware/tests/charwdr.* omegaware/tests/charwdv.*
+## omegaware/check.test
+EXTRA_DIST += \
+	omegaware/tests/check.ofm omegaware/tests/check.opl omegaware/tests/checked.opl
+DISTCLEANFILES += omegaware/tests/xcheck*
 ## omegaware/level1.test
 EXTRA_DIST += omegaware/tests/level1.opl
 DISTCLEANFILES += omegaware/tests/xlevel1.*
