@@ -1,0 +1,66 @@
+(OFMLEVEL H 0)
+(FONTDIR TL)
+(FAMILY UNSPECIFIED)
+(FACE F MRR)
+(CODINGSCHEME CHECKING TEST: NOT A REAL FONT)
+(DESIGNSIZE R 10.0)
+(COMMENT DESIGNSIZE IS IN POINTS)
+(COMMENT OTHER SIZES ARE MULTIPLES OF DESIGNSIZE)
+(CHECKSUM H 1A78D100)
+(SEVENBITSAFEFLAG FALSE)
+(LIGTABLE
+   (LABEL H 41)
+   (LIG H 41 H 44)
+   (LIG/ H 42 H 44)
+   (/LIG H 43 H 44)
+   (STOP)
+   (LABEL H 42)
+   (/LIG/ H 41 H 44)
+   (LIG/> H 42 H 44)
+   (/LIG> H 43 H 44)
+   (STOP)
+   (LABEL H 43)
+   (/LIG/> H 41 H 44)
+   (/LIG/>> H 42 H 44)
+   (KRN H 43 R 0.125)
+   (STOP)
+   (COMMENT THIS PART OF THE PROGRAM IS NEVER USED!
+      (KRN H 41 R 0.25)
+      (KRN H 42 R 0.0)
+      (KRN H 43 R 0.5)
+      )
+   )
+(CHARACTER H 41
+   (COMMENT
+      (LIG H 41 H 44)
+      (LIG/ H 42 H 44)
+      (/LIG H 43 H 44)
+      )
+   )
+(CHARACTER H 42
+   (CHARWD R 0.125)
+   (COMMENT
+      (/LIG/ H 41 H 44)
+      (LIG/> H 42 H 44)
+      (/LIG> H 43 H 44)
+      )
+   )
+(CHARACTER H 43
+   (CHARWD R 0.25)
+   (COMMENT
+      (/LIG/> H 41 H 44)
+      (/LIG/>> H 42 H 44)
+      (KRN H 43 R 0.125)
+      )
+   )
+(CHARACTER H 44
+   (CHARWD R 0.5)
+   )
+(CHARACTER H 45
+   (CHARWD R 0.5)
+   (NEXTLARGER H 46)
+   )
+(CHARACTER H 46
+   (CHARWD R 0.5)
+   )
+(COMMENT THE OFM FILE WAS BAD, SO THE DATA HAS BEEN CHANGED!)
